spring-boot/docker/orchestration/kubernetes-minikube/springboot-kubernetes-ingress-nginx/ingress.yml
apiVersion: networking.k8s.io/v1   
kind: Ingress   
metadata:   
  name: helloworld-ingress   
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /$1   
spec:   
  rules:   
    - host: helloworld.example   
      http:   
        paths:   
          - path: /   
            pathType: Prefix   
            backend:   
              service:   
                name: helloworld-service  
                port:   
                  number: 8080
